[package]
name = "db_driver"
version = "0.1.0"
edition = "2024"

[lib]
name = "db_driver"
crate-type = ["cdylib"]

[dependencies]
async-std = "1.13"
mysql_async = "0.35.1"
pyo3 = { version = "0.24" }
pyo3-async-runtimes = { version = "0.24", features = ["attributes", "tokio-runtime"] }
tokio = "1.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
